# DAS_Detector_Apneas

./: README.md
Documentacion/: puertos.txt
app_movil_sbc/: README.md  pubspec.yaml
app_movil_sbc/android/app/: build.gradle.kts
app_movil_sbc/ios/Runner/: Info.plist
app_movil_sbc/ios/Runner.xcodeproj/: project.pbxproj
app_movil_sbc/lib/: app_router.dart  main.dart
app_movil_sbc/lib/common/charts/: heart_rate_chart.dart  oxygen_chart.dart
app_movil_sbc/lib/common/core/: colors.dart  throttler.dart
app_movil_sbc/lib/common/widgets/: heartbeat_widget.dart  heatmap_widget.dart  (+4 more)
app_movil_sbc/lib/core/: app_colors.dart  app_theme.dart
app_movil_sbc/lib/data/: ble_manager.dart
app_movil_sbc/lib/services/: ota_ble_service.dart
app_movil_sbc/linux/: CMakeLists.txt
app_movil_sbc/linux/runner/: my_application.cc
app_movil_sbc/macos/Runner.xcodeproj/: project.pbxproj
app_movil_sbc/test/: widget_test.dart
app_movil_sbc/web/: index.html  manifest.json
app_movil_sbc/windows/: CMakeLists.txt
app_movil_sbc/windows/runner/: Runner.rc  main.cpp
esp32_proyecto_final/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp32_proyecto_final/main/: CMakeLists.txt  main.c
esp32_proyecto_final/main/network/: bluetooth.c  bluetooth.h
esp32_proyecto_final/main/sensors/: mpu6050.c  mpu6050.h  pulse_sensor.c  pulse_sensor.h  simulador_imu.c  simulador_imu.h  simulador_pulso.c  simulador_pulso.h  simulator.c  simulator.h
esp32_proyecto_final/main/utils/: packet_manager.c  packet_manager.h
esp32_proyecto_final/main/utils/ota/: ota.c  ota.h
(+21 files in other folders)
