idf_component_register(
  SRCS 
    "main.c"
    "network/bluetooth.c"
    "drivers/adc_driver.c"
    "sensors/pulse_sensor.c"
    "sensors/mpu6050.c"
    "utils/ota/ota.c"
  INCLUDE_DIRS
    "."
    "network"
    "drivers"
    "sensors"
    "utils/ota"
  REQUIRES 
    bt
    nvs_flash
    esp_adc
    app_update
)

