idf_component_register(
  SRCS 
    "main.c"
    "network/bluetooth.c"
    "drivers/adc_driver.c"
    "sensors/pulse_sensor.c"
    "sensors/mpu6050.c"
    "sensors/simulador_pulso.c"
    "sensors/simulador_imu.c"
    "utils/ota/ota.c"
    "utils/packet_manager.c"
  INCLUDE_DIRS
    "."
    "network"
    "drivers"
    "sensors"
    "utils/ota"
    "utils"
  REQUIRES 
    bt
    nvs_flash
    esp_adc
    app_update
    driver
    freertos
    esp_system
    esp_timer
    esp_common
)

